# Quake2-port

./: .gitignore  CMakeLists.txt  README.md
client/: cl_input.c  cl_scrn.c  snd_mem.c
ctf/: CMakeLists.txt  g_main.c  q_shared.c  q_shared.h
game/: CMakeLists.txt  g_local.h  g_main.c  q_shared.h
irix/: sys_irix.c
linux/: d_ifacea.h  sys_linux.c
null/: sys_null.c
qcommon/: net_chan.c  qcommon.h
ref_gl/: CMakeLists.txt  gl_image.c  gl_rmain.c
ref_soft/: CMakeLists.txt  d_ifacea.h  r_alias.c  r_bsp.c  r_edge.c  r_light.c  r_local.h  r_main.c  r_misc.c  r_model.c  r_model.h  r_poly.c  r_polyse.c  r_surf.c
rhapsody/: sys_rhap.m
rogue/: CMakeLists.txt  g_local.h  g_newai.c  m_flyer.c  m_mutant.c  m_parasite.c  q_shared.c  q_shared.h
server/: sv_world.c
solaris/: sys_solaris.c
win32/: cd_win.c  conproc.c  in_win.c  net_wins.c  q_shwin.c  rw_imp.c  sys_win.c
xatrix/: CMakeLists.txt  g_local.h  g_misc.c  q_shared.c  q_shared.h
